[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "file-integrity-monitor"
version = "1.0.0"
description = "Monitoriza cambios de integridad de archivos y mantiene historico SQLite."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "FatimaCyberLabs"}]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[project.scripts]
fim = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
packages = ["src"]
